--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<script>
-  (function(){window.onbeforeunload=function(){return '';}})();
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kite</title>
+</head>
+<body>
+
+  <script>
+    window.onbeforeunload = function() {
+      return "kite test";
+    };
+  </script>
+</body>
+</html>
