--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
   <title>Kite</title>
 </head>
 <body>
-
-  <script>
-    window.onbeforeunload = function() {
-      return "kite test";
-    };
-  </script>
+<iframe src="https://example.com" height="100%" width="100%"</iframe>
 </body>
 </html>
