--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Kite</title>
 </head>
 <body>
-<iframe src="https://example.com" height="100%" width="100%"</iframe>
+<object type="text/html" data="https://example.com" height="100%" width="100%"></object>
 </body>
 </html>
