--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kite</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blocked</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<object type="text/html" data="https://scarat3k.me" height="100%" width="100%"></object>
+    <div class="k-con">
+        <h1 class="k-h1">Website Blocked</h1>
+        <p class="k-p">This Website has been blocked by your Administrator</p>
+    </div>
 </body>
 </html>
